factadmin/manifests/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: fact-admin
spec:
  selector:
    deployment: fact-admin
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
